# ChangeLog for dev-python/mimeparse
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/mimeparse/ChangeLog,v 1.10 2013/05/03 17:44:22 floppym Exp $

  03 May 2013; Mike Gilbert <floppym@gentoo.org> mimeparse-0.1.3-r1.ebuild:
  Drop python3 from old incompatible version.

*mimeparse-0.1.4-r1 (03 May 2013)

  03 May 2013; Mike Gilbert <floppym@gentoo.org> +mimeparse-0.1.4-r1.ebuild,
  -mimeparse-0.1.4.ebuild:
  Copy the egg-info with the new package name to the original name for backward
  compat.

  03 May 2013; Mike Gilbert <floppym@gentoo.org> mimeparse-0.1.3-r1.ebuild,
  mimeparse-0.1.4.ebuild:
  Drop setuptools dep and fixup simplejson dep.

*mimeparse-0.1.4 (03 May 2013)

  03 May 2013; Mike Gilbert <floppym@gentoo.org> +mimeparse-0.1.4.ebuild:
  Version bump.

  02 May 2013; Jeroen Roovers <jer@gentoo.org> mimeparse-0.1.3-r1.ebuild:
  Marked ~hppa (bug #468268).

  02 May 2013; Ian Delaney <idella4@gentoo.org> mimeparse-0.1.3-r1.ebuild:
  Elected to add py3.1 support for long term benefit of aligning with
  testtools-0.9.30

*mimeparse-0.1.3-r1 (02 May 2013)

  02 May 2013; Ian Delaney <idella4@gentoo.org> +mimeparse-0.1.3-r1.ebuild:
  migrate -> distutils-r1

  14 Nov 2012; Ian Delaney <idella4@gentoo.org> metadata.xml:
  Updating maintainer, metadata.xml

  03 May 2012; Mike Gilbert <floppym@gentoo.org> mimeparse-0.1.3.ebuild:
  Restrict python 3. #413773 by James Rowe.

*mimeparse-0.1.3 (25 Apr 2012)

  25 Apr 2012; Theo Chatzimichos <tampakrap@gentoo.org> +metadata.xml,
  +mimeparse-0.1.3.ebuild:
  Initial commit, ebuild by idella4