@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/mimeparse
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/mimeparse/ChangeLog,v 1.10 2013/05/03 17:44:22 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/mimeparse/ChangeLog,v 1.11 2013/05/03 19:56:07 pinkbyte Exp $
+
+  03 May 2013; Sergey Popov <pinkbyte@gentoo.org> mimeparse-0.1.3-r1.ebuild,
+  mimeparse-0.1.4-r1.ebuild:
+  Add ~arm keyword, wrt bug #468268
 
   03 May 2013; Mike Gilbert <floppym@gentoo.org> mimeparse-0.1.3-r1.ebuild:
   Drop python3 from old incompatible version.
